--- a/src/main/resources/i18n/text.properties
+++ b/src/main/resources/i18n/text.properties
@@ -2,5 +2,7 @@ enter.title = User Credentials
 enter.email = Email
 enter.password = Password
 enter.register = Sign-In
+enter.cancel = Cancel
+enter.apply = Apply
 
 
