feat: added main ui interface (JavaFX)

--- a/src/main/resources/i18n/text.properties
+++ b/src/main/resources/i18n/text.properties
@@ -5,4 +5,17 @@ enter.register = Sign-In
 enter.cancel = Cancel
 enter.apply = Apply
 
+tab.home = Home
+tab.create = Create
+tab.list =  List
+tab.about = About
+tab.exit = Exit
+
+create.title = Title
+create.content = Content
+
+tooltip.clear = Clear
+tooltip.save = Save note
+tooltip.edit = Edit note
+tooltip.drop = Drop note
 
