fix: typographical error in checkbox

--- a/src/main/resources/i18n/text.properties
+++ b/src/main/resources/i18n/text.properties
@@ -1,7 +1,7 @@
 enter.title = User Credentials
 enter.email = Email
 enter.password = Password
-enter.register = Sign-In
+enter.register = Sign-Up
 enter.cancel = Cancel
 enter.apply = Apply
 
